test/tests/stages/9_functions/valid/libraries/addition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(add)
  (
  int
  identifier(x)
  ,
  int
  identifier(y)
  )
  {
  return
  identifier(x)
  +
  identifier(y)
  ;
  }
