test/tests/stages/9_functions/invalid_parse/funcall_wrong_closing_delim.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(foo)
  (
  int
  identifier(x)
  ,
  int
  identifier(y)
  )
  {
  return
  identifier(x)
  +
  identifier(y)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(1)
  ,
  const int(2)
  }
  ;
  }
